feature #3 add simple operation controller

--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -2,8 +2,6 @@
 spring.application.name=dynupdate
 # HTTP Server port
 server.port=8080
-# Make the application accessible on the given context path
-server.servlet.context-path=/${spring.application.name}
 # Data-Source
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb?useLegacyDatetimeCode=false;DB_CLOSE_DELAY=-1
@@ -16,7 +14,7 @@ spring.jpa.open-in-view=false
 spring.datasource.initialization-mode=always
 # Logger
 spring.jpa.show-sql=false
-logging.level.ROOT=INFO
+logging.level.ROOT=DEBUG
 spring.jpa.properties.hibernate.generate_statistics=false
 ## p6spy
 decorator.datasource.p6spy.enable-logging=true
