fixed def logging.level to INFO

--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -14,7 +14,7 @@ spring.jpa.open-in-view=false
 spring.datasource.initialization-mode=always
 # Logger
 spring.jpa.show-sql=false
-logging.level.ROOT=DEBUG
+logging.level.ROOT=INFO
 spring.jpa.properties.hibernate.generate_statistics=false
 ## p6spy
 decorator.datasource.p6spy.enable-logging=true
