--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>11</java.version>
-    <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
-    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-    <maven-surefire-plugin.version>2.5</maven-surefire-plugin.version>
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
     <p6spy-spring-boot.version>1.6.2</p6spy-spring-boot.version>
-    <integration-test.folder>**/org/**</integration-test.folder>
   </properties>
 
   <dependencies>
@@ -96,21 +93,30 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <mainClass>org.habr.examples.hibernate.dynamicupdate.DynamicUpdateApp</mainClass>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-plugin.version}</version>
-        <configuration>
-          <excludes>
-            <exclude>${integration-test.folder}</exclude>
-            <exclude>**/*$*</exclude>
-          </excludes>
+          <layers>
+            <enabled>true</enabled>
+            <includeLayerTools>false</includeLayerTools>
+          </layers>
+          <profiles>
+            <profile>h2</profile>
+          </profiles>
         </configuration>
       </plugin>
       <plugin>
@@ -133,12 +139,13 @@
             </path>
           </annotationProcessorPaths>
           <compilerArgs>
-            <arg>-Amapstruct.defaultComponentModel=spring</arg>
-            <arg>-Amapstruct.unmappedTargetPolicy=WARN</arg>
+            -Amapstruct.defaultComponentModel=spring
+            -Amapstruct.unmappedTargetPolicy=WARN
           </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
+    <finalName>dynamic-update-server</finalName>
   </build>
 
 </project>
