--- a/.github/workflows/auto-build-n-test.yml
+++ b/.github/workflows/auto-build-n-test.yml
@@ -8,10 +8,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: setup JDK 1.11 fox x64 architecture
+      - name: setup JDK 11 for x64 architecture
         uses: actions/setup-java@v1
         with:
-          java-version: 1.11
+          java-version: '11.0.8'
           architecture: x64
       - name: Build&Test with Maven
         run: mvn -B verify --file pom.xml
