--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -4,7 +4,7 @@ spring.application.name=dynupdate
 server.port=8080
 # Data-Source
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb?useLegacyDatetimeCode=false;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:testdb?useLegacyDatetimeCode=false;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
