--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
     <p6spy-spring-boot.version>1.6.2</p6spy-spring-boot.version>
+    <specification-arg-resolver.version>2.6.1</specification-arg-resolver.version>
   </properties>
 
   <dependencies>
@@ -55,6 +56,20 @@
       <groupId>com.github.gavlyukovskiy</groupId>
       <artifactId>p6spy-spring-boot-starter</artifactId>
       <version>${p6spy-spring-boot.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.querydsl</groupId>
+      <artifactId>querydsl-apt</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.querydsl</groupId>
+      <artifactId>querydsl-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>net.kaczmarzyk</groupId>
+      <artifactId>specification-arg-resolver</artifactId>
+      <version>${specification-arg-resolver.version}</version>
     </dependency>
     <!--tests-->
     <dependency>
